[package]
name = "minecraftstuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valence = { git = "https://github.com/valence-rs/valence" }
num = "0.4"
rayon = "1"
vek = "0.15"
log = "0.4"
uuid = { version = "1", features = ["serde"] }
env_logger = "0.9"

[dev-dependencies]
